# ImageCompression

./: CMakeLists.txt  README.md
backup/: HuffmanCompression.cpp  HuffmanCompression.h  main.cpp  main3.cpp
images/: lzw.ylf  lzw_test.lzw  result_3  result_4
include/: HuffmanCompression.h  HuffmanNode.h  Image.h  ImageIO.h  LZWcompress.h  tools.h
src/: HuffmanCompression.cpp  HuffmanNode.cpp  Image.cpp  ImageIO.cpp  LZWcompress.cpp  main.cpp  main2.cpp  main3.cpp  opencv_test.cpp  tools.cpp
